# pkg/bff/docs/swagger.yaml
@@ -652,6 +652,34 @@ paths:
       summary: Create a new organization [create:organizations]
       tags:
       - organizations
+  /organizations/{id}:
+    delete:
+      description: Completely delete an organization, including the registration and
+        collaborators.
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Reply'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/api.Reply'
+        "403":
+          description: User is not a collaborator in the organization
+          schema:
+            $ref: '#/definitions/api.Reply'
+        "404":
+          description: Organization not found
+          schema:
+            $ref: '#/definitions/api.Reply'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.Reply'
+      summary: Delete an organization [delete:organizations]
+      tags:
+      - organizations
   /overview:
     get:
       description: Returns a high level summary representing the state of each directory
