# pkg/bff/server.go
@@ -374,6 +374,7 @@ func (s *Server) setupRoutes() (err error) {
 		{
 			organizations.GET("", auth.Authorize(auth.ReadOrganizations), userinfo, s.ListOrganizations)
 			organizations.POST("", auth.DoubleCookie(), auth.Authorize(auth.CreateOrganizations), userinfo, s.CreateOrganization)
+			organizations.DELETE("/:orgID", auth.DoubleCookie(), auth.Authorize(auth.DeleteOrganizations), userinfo, s.DeleteOrganization)
 		}
 		collaborators := v1.Group("/collaborators")
 		{
